# Firewheel

./: .gitignore  Cargo.toml  DESIGN_DOC.md  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
crates/firewheel-c/: Cargo.toml  build.rs
crates/firewheel-c/include/: firewheel-c.h
crates/firewheel-c/src/: lib.rs
crates/firewheel-core/: Cargo.toml
crates/firewheel-core/src/: clock.rs  collector.rs  event.rs  lib.rs  log.rs  mask.rs  node.rs  sample_resource.rs
crates/firewheel-core/src/clock/: transport.rs
crates/firewheel-core/src/diff/: leaf.rs  mod.rs  notify.rs
crates/firewheel-core/src/dsp/: buffer.rs  coeff_update.rs  declick.rs  distance_attenuation.rs  fade.rs  interleave.rs  mix.rs  mod.rs  volume.rs
crates/firewheel-core/src/dsp/filter/: butterworth.rs  smoothing_filter.rs  svf.rs
crates/firewheel-core/src/param/: smoother.rs
crates/firewheel-cpal/: Cargo.toml
crates/firewheel-cpal/src/: lib copy.rs  lib.rs
crates/firewheel-graph/: Cargo.toml
crates/firewheel-graph/src/: backend.rs  context.rs  error.rs  ftz.rs  graph.rs  lib.rs  processor.rs
crates/firewheel-graph/src/graph/: compiler.rs  dummy_node.rs
crates/firewheel-graph/src/graph/compiler/: schedule.rs
crates/firewheel-graph/src/processor/: event_scheduler.rs  handle_messages.rs  process.rs  profiling.rs  transport.rs
crates/firewheel-macros/: Cargo.toml
crates/firewheel-nodes/: Cargo.toml
crates/firewheel-nodes/src/: beep_test.rs  clap_plugin.rs  convolution.rs  delay_compensation.rs  echo.rs  envelopes.rs  fast_rms.rs  filter.rs  lib.rs  mix.rs  peak_meter.rs  sampler.rs  spatial_basic.rs  stereo_to_mono.rs  svf.rs  triple_buffer.rs  volume.rs  volume_pan.rs
crates/firewheel-nodes/src/fast_filters/: bandpass.rs  highpass.rs  lowpass.rs
crates/firewheel-nodes/src/freeverb/: all_pass.rs  comb.rs  delay_line.rs  mod.rs
crates/firewheel-nodes/src/noise_generator/: pink.rs  white.rs
crates/firewheel-nodes/src/stream/: reader.rs  writer.rs
crates/firewheel-pool/: Cargo.toml
crates/firewheel-pool/src/: lib.rs  sampler.rs  spatial_basic.rs  volume_pan.rs
crates/firewheel-rtaudio/: Cargo.toml
crates/firewheel-rtaudio/src/: lib.rs
crates/firewheel-symphonium/: Cargo.toml
crates/firewheel-symphonium/src/: lib.rs
examples/beep_test/: Cargo.toml
examples/beep_test/src/: main.rs
examples/bindings/: cpal.sh  main.c  rtaudio.sh
examples/cpal_input/: Cargo.toml
examples/cpal_input/src/: main.rs
examples/custom_nodes/: Cargo.toml
examples/custom_nodes/src/: main.rs  system.rs  ui.rs
examples/custom_nodes/src/nodes/: clap_plugin.rs  filter.rs  mod.rs  noise_gen.rs  rms.rs
examples/custom_nodes/src/nodes/assets/: polly.clap
examples/filter_example/: Cargo.toml
examples/filter_example/src/: main.rs
examples/memoized/: Cargo.toml
examples/memoized/src/: main.rs
examples/play_sample/: Cargo.toml
examples/play_sample/src/: main.rs
examples/rtaudio_beep_test/: Cargo.toml
examples/rtaudio_beep_test/src/: main.rs
examples/sampler_pool/: Cargo.toml
examples/sampler_pool/src/: main.rs  system.rs  ui.rs
examples/sampler_test/: Cargo.toml
examples/sampler_test/src/: main.rs  system.rs
examples/spatial_basic/: Cargo.toml
examples/spatial_basic/src/: main.rs  system.rs
examples/stream_nodes/: Cargo.toml
examples/stream_nodes/src/: main.rs
examples/visual_node_graph/: Cargo.toml
examples/visual_node_graph/src/: main.rs  system.rs  ui.rs
examples/visualizer/: Cargo.toml
examples/visualizer/src/: main.rs  system.rs  ui.rs
src/: lib.rs
