[package]
name = "play_sample"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../" }
tracing.workspace = true
tracing-subscriber.workspace = true
symphonium = { version = "0.6.5", features = ["mp3", "flac"] }
clap = { version = "4", features = ["derive"] }
