[package]
name = "sampler_pool"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# Note, the "scheduled_events" feature is not needed to use the pool feature.
# Rust analyzer just gets confused without it in this example.
firewheel = { path = "../../", features = ["pool", "scheduled_events"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui.workspace = true
eframe.workspace = true
symphonium = { version = "0.7.0", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
