[package]
name = "sampler_test"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["peak_meter_node"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
symphonium = { version = "0.6.5", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
