[package]
name = "spatial_basic"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["spatial_basic_node"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui.workspace = true
eframe.workspace = true
symphonium = { version = "0.6.5", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
