[package]
name = "stream_nodes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["stream_nodes"] }
# The use of `bevy_platform` is optional, but it is recommended for better
# compatibility with webassembly, no_std, and platforms without 64 bit atomics.
bevy_platform.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
