[package]
name = "visual_node_graph"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["all_nodes"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui = "0.32"
egui-snarl = "0.8"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "x11",
    "wayland",
] }
symphonium = { version = "0.6.4", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
