[package]
name = "visual_node_graph"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firewheel = { path = "../../", features = ["all_nodes"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui.workspace = true
eframe.workspace = true
egui-snarl = "0.9.0"
symphonium = { version = "0.7.0", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
