[package]
name = "visualizer"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
firewheel = { path = "../../", features = ["triple_buffer_node"] }
tracing.workspace = true
tracing-subscriber.workspace = true
egui.workspace = true
eframe.workspace = true
symphonium = { version = "0.7.0", features = ["mp3", "flac"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
